Add Makefile & README

--- a/DSP/Makefile
+++ b/DSP/Makefile
@@ -1,16 +1,20 @@
+.PHONY: main
 main: src/main.cpp include/csvreader.hpp include/FixedPointNumber.hpp
 	g++ -Wall -o main --std=c++14 src/main.cpp
+	./main
 
-process: src/process_data.cpp include/csvreader.hpp include/FixedPointNumber.hpp
+.PHONY: process_data
+process_data: src/process_data.cpp include/csvreader.hpp include/FixedPointNumber.hpp
 	g++ -Wall -o process_data --std=c++14 src/process_data.cpp
+	./process_data
 
 .PHONY: clean
 clean:
 	rm -f main
 	rm -f process_data
 
-.PHONY: cleanresult
-cleanresult:
+.PHONY: clean_data
+clean_data:
 	rm -f result/golden/*
 	rm -f result/golden_double/*
 	rm -f result/golden_norm/*
