--- a/DSP/Makefile
+++ b/DSP/Makefile
@@ -1,11 +1,22 @@
+SIGN_BITS = 1
+INT_BITS  = 3
+FRAC_BITS = 12
+DEFINE_FIXED = -DSIGN_BITS=$(SIGN_BITS) -DINT_BITS=$(INT_BITS) -DFRAC_BITS=$(FRAC_BITS)
+
+INC = -I../common -I../FixedPointNumberLibrary/include
+
+OPT = -Wall --std=c++14 $(DEFINE_FIXED) $(INC)
+
 .PHONY: main
-main: src/main.cpp include/csvreader.hpp include/FixedPointNumber.hpp
-	g++ -Wall -o main --std=c++14 src/main.cpp
+main:
+	rm -f main
+	g++ -o main src/main.cpp $(OPT)
 	./main
 
 .PHONY: process_data
-process_data: src/process_data.cpp include/csvreader.hpp include/FixedPointNumber.hpp
-	g++ -Wall -o process_data --std=c++14 src/process_data.cpp
+process_data:
+	rm -f process_data
+	g++ -o process_data src/process_data.cpp $(OPT)
 	./process_data
 
 .PHONY: clean
