--- a/ML/Makefile
+++ b/ML/Makefile
@@ -2,6 +2,11 @@
 help:
 	echo "hi"
 
+.PHONY: ml
+ml:
+	python3 dataset.py
+	python3 train.py
+
 .PHONY: clean_data
 clean_data:
 	rm -f dataset.tar.gz
